fix(_reset.scss): hide clear icon for search inputs
adds back removed style that was changed in 2c723c0

--- a/packages/vuetify/src/styles/generic/_reset.scss
+++ b/packages/vuetify/src/styles/generic/_reset.scss
@@ -132,6 +132,7 @@ input {
   outline-offset: -2px; /* Correct the outline style in Safari */
 }
 
+[type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none; /* Remove the inner padding in Chrome and Safari on macOS */
 }
