docs: change inline code colors in dark mode

--- a/packages/docs/src/styles/overrides.sass
+++ b/packages/docs/src/styles/overrides.sass
@@ -56,3 +56,7 @@ ul, ol
 
     &.theme--dark
       border-bottom-color: #FFFFFF1F !important
+
+.v-application.theme--dark code
+  background: #1f1f1f
+  color: #d16f72
