--- a/packages/vuetify/src/styles/settings/_utilities.scss
+++ b/packages/vuetify/src/styles/settings/_utilities.scss
@@ -370,6 +370,7 @@ $utilities: map-deep-merge(
       values: (
         wrap: normal,
         no-wrap: nowrap,
+        pre-wrap: pre-wrap,
       )
     ),
     "overflow-wrap": (
