docs: remove background color from prismjs tokens

--- a/packages/docs/src/styles/overrides.sass
+++ b/packages/docs/src/styles/overrides.sass
@@ -60,3 +60,7 @@ ul, ol
 .v-application.theme--dark code
   background: #1f1f1f
   color: #d16f72
+
+// Remove background colour from prismjs tokens
+.token
+  background: none !important
