--- a/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
+++ b/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
@@ -2,6 +2,11 @@
 @import '../../styles/styles.sass'
 
 .v-input--radio-group
+  legend.v-label
+    cursor: text
+    font-size: 14px
+    height: auto
+
   &__input
     border: none
     display: flex
@@ -23,6 +28,9 @@
       flex-wrap: wrap
 
   &--column
+    legend
+      padding-bottom: $radio-group-padding
+
     .v-radio:not(:last-child):not(:only-child)
       margin-bottom: $radio-group-padding
 
