fix(VTextField): add background color to line on focus (#12556)

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -176,6 +176,7 @@
       border-width: thin 0 0 0
 
     &:after
+      background-color: currentColor
       border-color: currentColor
       border-style: solid
       border-width: thin 0 thin 0
