--- a/packages/vuetify/src/components/VDivider/VDivider.sass
+++ b/packages/vuetify/src/components/VDivider/VDivider.sass
@@ -25,7 +25,7 @@
     align-self: stretch
     border: solid
     border-width: 0 thin 0 0
-    display: inline-flex
+    display: inline
     height: inherit
     min-height: 100%
     max-height: 100%
