--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -342,6 +342,7 @@
       padding: $text-field-enclosed-details-padding
 
     .v-text-field__details
+      padding-top: $text-field-details-padding-top
       margin-bottom: $text-field-details-margin-bottom
 
   &--reverse
