feat(styles): added text-pre-line utility class

--- a/packages/vuetify/src/styles/settings/_utilities.scss
+++ b/packages/vuetify/src/styles/settings/_utilities.scss
@@ -371,6 +371,7 @@ $utilities: map-deep-merge(
         wrap: normal,
         no-wrap: nowrap,
         pre: pre,
+        pre-line: pre-line,
         pre-wrap: pre-wrap,
       )
     ),
