feat: initial theme implementation (#12542)
Co-authored-by: Kael <kaelwd@gmail.com>
Co-authored-by: John Leider <john.j.leider@gmail.com>

--- a/packages/vuetify/src/styles/tools/_functions.sass
+++ b/packages/vuetify/src/styles/tools/_functions.sass
@@ -68,3 +68,7 @@
       $result: map-merge($result, ( $key: map-deep-merge($parent-value, $child) ))
 
   @return $result
+
+@function theme-color($color, $opacity: 1)
+  $color: rgba(var(--v-theme-#{$color}), $opacity)
+  @return $color
