fix(VBtn): disabled state background-color (#12892)
fixes #12845

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -22,6 +22,9 @@
     .v-btn__loading
       color: map-deep-get($material, 'buttons', 'disabled') !important
 
+    &:not(.v-btn--outlined):not(.v-btn--plain):not(.v-btn--text)
+      background-color: map-deep-get($material, 'buttons', 'focused') !important
+
     &.v-btn--has-bg
       background-color: map-deep-get($material, 'buttons', 'focused') !important
 
