fix(VBtn): show background on non-elevated buttons, fix color states (#12908)
fixes #12903

related: #12892, #12845, 12814

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -22,9 +22,6 @@
     .v-btn__loading
       color: map-deep-get($material, 'buttons', 'disabled') !important
 
-    &:not(.v-btn--outlined):not(.v-btn--plain):not(.v-btn--text)
-      background-color: map-deep-get($material, 'buttons', 'focused') !important
-
     &.v-btn--has-bg
       background-color: map-deep-get($material, 'buttons', 'focused') !important
 
@@ -105,6 +102,7 @@
   // https://stackoverflow.com/questions/10305658/prevent-button-from-shifting-during-click-in-ie
   position: relative
   transition: inherit
+  transition-property: opacity
 
   .v-icon--left,
   .v-icon--right
@@ -233,11 +231,6 @@
 
 .v-btn--outlined
   border: $btn-outline-border-width solid currentColor
-
-.v-btn:not(.v-btn--has-bg)
-  .v-btn__content
-    .v-icon
-      color: currentColor
 
 .v-btn--plain
   &::before
