--- a/packages/vuetify/src/components/VGrid/_mixins.sass
+++ b/packages/vuetify/src/components/VGrid/_mixins.sass
@@ -46,23 +46,23 @@
     $infix: breakpoint-infix($breakpoint, $breakpoints)
     // Allow columns to stretch full width below their breakpoints
     @for $i from 1 through $columns
-      .col#{$infix}-#{$i}
+      .v-col#{$infix}-#{$i}
         @extend %grid-column
-    .col#{$infix},
-    .col#{$infix}-auto
+    .v-col#{$infix},
+    .v-col#{$infix}-auto
       @extend %grid-column
     +media-breakpoint-up($breakpoint, $breakpoints)
       // Provide basic `.col-{bp}` classes for equal-width flexbox columns
-      .col#{$infix}
+      .v-col#{$infix}
         flex-basis: 0
         flex-grow: 1
         max-width: 100%
-      .col#{$infix}-auto
+      .v-col#{$infix}-auto
         flex: 0 0 auto
         width: auto
         max-width: 100% // Reset earlier grid tiers
       @for $i from 1 through $columns
-        .col#{$infix}-#{$i}
+        .v-col#{$infix}-#{$i}
           +make-col($i, $columns)
       // `$columns - 1` because offsetting by the width of an entire row isn't possible
       @for $i from 0 through $columns - 1
