fix(grid): don't halve gutters between v-rows (#12916)
fixes #12915

--- a/packages/vuetify/src/components/VGrid/VGrid.sass
+++ b/packages/vuetify/src/components/VGrid/VGrid.sass
@@ -14,6 +14,12 @@
 .row
   +make-row
 
+  & + .row
+    margin-top: $grid-gutter / 2
+
+    &--dense
+      margin-top: $form-grid-gutter / 2
+
   &--dense
     margin: -$form-grid-gutter / 2
 
