--- a/packages/vuetify/src/components/VSheet/VSheet.sass
+++ b/packages/vuetify/src/components/VSheet/VSheet.sass
@@ -1,15 +1,8 @@
 // Imports
 @import './_variables.scss'
 
-// Theme
-+theme(v-sheet) using ($material)
-  background-color: map-get($material, 'cards')
-  border-color: map-get($material, 'cards')
-  color: map-deep-get($material, 'text', 'primary')
-
-  &--outlined
-    border: $sheet-outlined-border-width solid map-get($material, 'dividers')
-
-// Sheet
 .v-sheet
-  +paper($sheet-elevation, $sheet-border-radius, $sheet-shaped-border-radius)
+  @include border($sheet-query)
+  @include elevated($sheet-query)
+  @include position($sheet-query)
+  @include rounded($sheet-query)
