feat(VSystemBar): convert to v3

--- a/packages/vuetify/src/components/VFooter/_variables.scss
+++ b/packages/vuetify/src/components/VFooter/_variables.scss
@@ -1,6 +1,7 @@
 // Defaults
 $footer-border-radius: map-get($rounded, 0) !default;
 $footer-flex: 1 1 auto !default;
+$footer-font-size: 14px;
 $footer-elevation: 0 !default;
 $footer-padding: 8px 24px !default;
 $footer-positions: absolute fixed !default;
