--- a/packages/vuetify/src/styles/settings/_variables.scss
+++ b/packages/vuetify/src/styles/settings/_variables.scss
@@ -42,6 +42,19 @@ $border-opacities: map-deep-merge(
   $border-opacities
 );
 
+$states: () !default;
+$states: map-deep-merge(
+    (
+    'hover': 0.04,
+    'focus': 0.12,
+    'selected': 0.08,
+    'activated': 0.12,
+    'pressed': 0.16,
+    'dragged': 0.08
+  ),
+  $states
+);
+
 $rounded: () !default;
 $rounded: map-deep-merge(
   (
