--- a/packages/vuetify/src/styles/tools/_rounded.sass
+++ b/packages/vuetify/src/styles/tools/_rounded.sass
@@ -1,2 +1,2 @@
-@mixin rounded($query: $query, $important: false)
+@mixin rounded($query, $important: false)
   border-radius: map-get($query, 'border-radius') if($important, !important, null)
