--- a/packages/vuetify/src/styles/tools/_theme.sass
+++ b/packages/vuetify/src/styles/tools/_theme.sass
@@ -1,5 +1,5 @@
 @mixin theme ($component)
-  .theme--light.#{$component}
+  .v-theme--light.#{$component}
     @content($material-light)
-  .theme--dark.#{$component}
+  .v-theme--dark.#{$component}
     @content($material-dark)
