--- a/packages/vuetify/src/components/VApp/VApp.sass
+++ b/packages/vuetify/src/components/VApp/VApp.sass
@@ -4,6 +4,7 @@
   display: flex
   background: rgb(var(--v-theme-background))
   color: rgb(var(--v-theme-on-background))
+  --v-theme-overlay-multiplier: var(--v-theme-background-overlay-multiplier)
 
   a
     cursor: pointer
