--- a/packages/vuetify/src/styles/tools/_index.sass
+++ b/packages/vuetify/src/styles/tools/_index.sass
@@ -1,12 +1,14 @@
 @import './_functions'
 @import './_bootable'
 @import './_border'
+@import './_density'
 @import './_elevation'
 @import './_position'
 @import './_radius'
 @import './_rounded'
 @import './_rtl'
 @import './_sheet'
+@import './_sizes'
 @import './_states'
 @import './_theme'
 @import './_utilities'
