--- a/packages/vuetify/src/styles/tools/_states.sass
+++ b/packages/vuetify/src/styles/tools/_states.sass
@@ -1,17 +1,20 @@
-@mixin states ($material)
-  &:hover::before
-    opacity: map-deep-get($material, 'states', 'hover')
+@mixin states ($selector: '&::before')
+  &:hover
+    #{$selector}
+      opacity: calc(#{map-get($states, 'hover')} * var(--v-theme-overlay-multiplier))
 
-  &:focus::before
-    opacity: map-deep-get($material, 'states', 'focus')
+  &:focus
+    #{$selector}
+      opacity: calc(#{map-get($states, 'focus')} * var(--v-theme-overlay-multiplier))
 
   &--active
-    +active-states($material)
+    +active-states($selector)
 
-@mixin active-states ($material)
-  &:hover::before,
-  &::before
-    opacity: map-deep-get($material, 'states', 'activated')
+@mixin active-states ($selector: '::before')
+  &:hover#{$selector},
+  #{$selector}
+    opacity: calc(#{map-get($states, 'activated')} * var(--v-theme-overlay-multiplier))
 
-  &:focus::before
-    opacity: map-deep-get($material, 'states', 'pressed')
+  &:focus
+    #{$selector}
+      opacity: calc(#{map-get($states, 'pressed')} * var(--v-theme-overlay-multiplier))
