feat(transition): update to vue 3, use material easings (#13096)
BREAKING CHANGE: Removed the $transition SASS map
BREAKING CHANGE: Removed the .transition-<name> classes

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -16,7 +16,7 @@
   text-indent: $button-text-letter-spacing
   text-transform: $button-text-transform
   transition-property: box-shadow, transform, opacity
-  transition: 0.28s map-get($transition, 'fast-out-slow-in')
+  transition: 0.28s $standard-easing
   user-select: none
   vertical-align: $button-vertical-align
 
