--- a/packages/vuetify/src/components/VIcon/VIcon.sass
+++ b/packages/vuetify/src/components/VIcon/VIcon.sass
@@ -12,7 +12,7 @@
   line-height: 1
   position: relative
   text-indent: 0
-  transition: $primary-transition, visibility 0s
+  transition: 0.3s $standard-easing, visibility 0s
   vertical-align: middle
   user-select: none
 
