refactor(scss): refactor scss mixins and imports (#13183)
Added index files; Refactor Rounded and Border mixins; change imports

--- a/packages/vuetify/src/components/VBanner/VBanner.sass
+++ b/packages/vuetify/src/components/VBanner/VBanner.sass
@@ -10,7 +10,7 @@
   width: $banner-width;
 
   &::after {
-    @include border($banner-query);
+    @include border($banner-border-color, $banner-border-style, $banner-border-width);
 
     bottom: 0;
     content: '';
@@ -20,9 +20,9 @@
     top: auto;
   }
 
-  @include elevated($banner-query);
-  @include position($banner-query);
-  @include rounded($banner-query);
+  @include elevated($banner-elevation);
+  @include position($banner-positions);
+  @include rounded($banner-border-radius);
 
   @include ltr() {
     padding-left: $banner-padding-start;
