fix(sass): use correct formatting for sass files

--- a/packages/vuetify/src/components/VFooter/VFooter.sass
+++ b/packages/vuetify/src/components/VFooter/VFooter.sass
@@ -1,15 +1,14 @@
 // Imports
-@import './index';
+@import './index'
 
-.v-footer {
-  align-items: center;
-  display: flex;
-  flex: $footer-flex;
-  padding: $footer-padding;
-  position: relative;
+.v-footer
+  align-items: center
+  display: flex
+  flex: $footer-flex
+  padding: $footer-padding
+  position: relative
 
-  // missing from variables @include border($footer-query);
-  @include elevated($footer-elevation);
-  @include position($footer-positions);
-  @include rounded($footer-border-radius);
-}
+  // missing from variables @include border($footer-query)
+  @include elevated($footer-elevation)
+  @include position($footer-positions)
+  @include rounded($footer-border-radius)
